--- a/build.yaml
+++ b/build.yaml
@@ -11,7 +11,5 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
----
-include:
-  - board: pillbug
-  - shield: bb65
+board: ["blackpill_f401ce", "blackpill_f411ce", "pillbug"]
+shield: ["bb65", "settings_reset"]
