--- a/boards/shields/bb65/bb65.conf
+++ b/boards/shields/bb65/bb65.conf
@@ -2,8 +2,8 @@
 #CONFIG_ZMK_USB_LOGGING=y
 
 # Change both 'y' to 'n' to disable encoder
-#CONFIG_EC11=y
-#CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 ### QOL SETTINGS ###
 
